RESOLVED FIXED281533
REGRESSION (283160@main): Live Text in paused element fullscreen videos is positioned incorrectly
https://bugs.webkit.org/show_bug.cgi?id=281533
Summary REGRESSION (283160@main): Live Text in paused element fullscreen videos is po...
Wenson Hsieh
Reported 2024-10-15 15:51:08 PDT
Attachments
Wenson Hsieh
Comment 1 2024-10-15 16:22:43 PDT
EWS
Comment 2 2024-10-15 19:07:37 PDT
Committed 285237@main (ba56d1f12cd2): <https://commits.webkit.org/285237@main> Reviewed commits have been landed. Closing PR #35245 and removing active labels.
EWS
Comment 3 2024-10-17 14:39:43 PDT
Committed 283286.313@safari-7620-branch (ce27af6e39be): <https://commits.webkit.org/283286.313@safari-7620-branch> Reviewed commits have been landed. Closing PR #2065 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.