REGRESSION (283160@main): Live Text in paused element fullscreen videos is positioned incorrectly https://bugs.webkit.org/show_bug.cgi?id=281533 rdar://137915240

Reviewed by Andy Estes and Abrar Rahman Protyasha.

After the changes in 283160@main, the content view's origin is now flush against the top of the
window in element fullscreen mode, as opposed to being below the status bar. However, the image
analysis interaction rect (i.e. `videoBox` of the predominant media element in root view space)
doesn't account for this; as a result, the interaction rect used to lay out Live Text rects
corresponding to the paused video frame are all vertically offset by an amount equal to the height
of the status bar (i.e. obscured top inset).

Adjust for this by offsetting the interaction rect in root view coordinates by the obscured inset
left and top when computing the interaction bounds.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView contentsRectForImageAnalysisInteraction:]):

Canonical link: https://commits.webkit.org/285237@main